Allow changing vm_type of apply-addons VM
Signed-off-by: Akshay Mankar <amankar@pivotal.io>

--- a/manifests/ops-files/vm-types.yml
+++ b/manifests/ops-files/vm-types.yml
@@ -5,3 +5,7 @@
 - type: replace
   path: /instance_groups/name=worker/vm_type
   value: ((worker_vm_type))
+
+- type: replace
+  path: /instance_groups/name=apply-addons/vm_type
+  value: ((apply_addons_vm_type))
