--- a/manifests/ops-files/allow-privileged-containers.yml
+++ b/manifests/ops-files/allow-privileged-containers.yml
@@ -6,3 +6,7 @@
 - type: replace
   path: /instance_groups/name=worker/jobs/name=kubelet/properties/allow_privileged?
   value: true
+
+- type: replace
+  path: /instance_groups/name=master/jobs/name=kube-apiserver/properties/security-context-deny?
+  value: true
