some manifest tuning for deployment in azure.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 .DS_Store
+bin/go-outline
+bin/gopkgs
 pkg
 !/src/kubo-deployment-tests/resources/environments/test_gcp_with_creds/creds.yml
 *.iml
 *.terraform
 *.tfstate
 *.backup
+src/github.com/uudashr/gopkgs
