--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -185,7 +185,9 @@ instance_groups:
 name: cfcr
 releases:
 - name: kubo
-  version: latest
+  version: 0.21.0
+  url: https://bosh.io/d/github.com/cloudfoundry-incubator/kubo-release?v=0.21.0
+  sha1: 24d6f17865dbf0e68cef4495c6d5bdcb46b4a132
 - name: cfcr-etcd
   sha1: 728839a7ddd44757e31ef0fdbcd131c2be23ab0e
   url: https://github.com/cloudfoundry-incubator/cfcr-etcd-release/releases/download/v1.5.0/cfcr-etcd-release-1.5.0.tgz
