Backend service provided for GCP vm extension
[#160417211]

Signed-off-by: Oleksandr Slynko <oslynko@pivotal.io>

--- a/manifests/cloud-config/iaas/gcp/use-vm-extensions.yml
+++ b/manifests/cloud-config/iaas/gcp/use-vm-extensions.yml
@@ -1,5 +1,6 @@
 vm_extensions:
 - cloud_properties:
+    backend_service: ((cfcr_backend_service))
     service_account: ((cfcr_master_service_account_address))
   name: ((deployment_name))-master-cloud-properties
 - cloud_properties:
