--- a/manifests/ops-files/add-oidc-endpoint.yml
+++ b/manifests/ops-files/add-oidc-endpoint.yml
@@ -1,10 +1,10 @@
 - type: replace
-  path: /instance_groups/name=master/jobs/name=kube-apiserver/properties/oidc?
+  path: /instance_groups/name=master/jobs/name=kube-apiserver/properties/args?
   value:
-    issuer-url: ((oidc_issuer_url))
-    client-id: ((oidc_client_id))
-    username-claim: ((oidc_username_claim))
-    username-prefix: ((oidc_username_prefix))
-    groups-claim: ((oidc_groups_claim))
-    groups-prefix: ((oidc_groups_prefix))
-    ca: ((oidc_ca))
+    oidc-ca: ((oidc_ca))
+    oidc-client-id: ((oidc_client_id))
+    oidc-groups-claim: ((oidc_groups_claim))
+    oidc-groups-prefix: ((oidc_groups_prefix))
+    oidc-issuer-url: ((oidc_issuer_url))
+    oidc-username-claim: ((oidc_username_claim))
+    oidc-username-prefix: ((oidc_username_prefix))
