--- a/manifests/ops-files/change-cidrs.yml
+++ b/manifests/ops-files/change-cidrs.yml
@@ -8,8 +8,8 @@
   value: ((service_cluster_cidr))
 
 - type: replace
-  path: /instance_groups/name=worker/jobs/name=kubelet/properties/kubedns-service-ip?
-  value: ((kubedns_service_ip))
+  path: /instance_groups/name=worker/jobs/name=kubelet/properties/kubelet-configuration/clusterDNS?
+  value: [((kubedns_service_ip))]
 
 - type: replace
   path: /instance_groups/name=worker/jobs/name=flanneld/properties?
