--- a/manifests/ops-files/add-windows-worker.yml
+++ b/manifests/ops-files/add-windows-worker.yml
@@ -8,14 +8,18 @@
 - type: replace
   path: /releases/-
   value:
-    name: windows-utilities
-    version: latest
+    name: "windows-utilities"
+    version: "0.11.0"
+    url: "https://bosh.io/d/github.com/cloudfoundry-incubator/windows-utilities-release?v=0.11.0"
+    sha1: "efc10ac0f4acae23637ce2c6f864d20df2e3a781"
 
 - type: replace
   path: /releases/-
   value:
-    name: sysctl
-    version: latest
+    name: "os-conf"
+    version: "20.0.0"
+    url: "https://bosh.io/d/github.com/cloudfoundry/os-conf-release?v=20.0.0"
+    sha1: "a60187f038d45e2886db9df82b72a9ab5fdcc49d"
 
 - type: replace
   path: /addons/-
@@ -24,11 +28,11 @@
     jobs:
     - name: sysctl
       properties:
-        sysctl_conf: |
-          net.ipv4.neigh.default.gc_thresh3 = 8192
-          net.ipv4.neigh.default.gc_thresh2 = 4096
-          net.ipv4.neigh.default.gc_thresh1 = 2048
-      release: sysctl
+        sysctl:
+          - net.ipv4.neigh.default.gc_thresh3=8192
+          - net.ipv4.neigh.default.gc_thresh2=4096
+          - net.ipv4.neigh.default.gc_thresh1=2048
+      release: os-conf
     include:
       stemcell:
       - os: ubuntu-trusty
@@ -43,6 +47,7 @@
       - os: windows1803
     jobs:
     - name: bosh-dns-windows
+      release: bosh-dns
       properties:
         api:
           client:
@@ -57,7 +62,20 @@
           enabled: true
           server:
             tls: ((/dns_healthcheck_server_tls))
-      release: bosh-dns
+
+- type: replace
+  path: /addons/-
+  value:
+    name: set-pw
+    include:
+      stemcell:
+      - os: windows1803
+    jobs:
+    - name: enable_rdp
+      release: windows-utilities
+      properties:
+        enable_rdp:
+          enabled: true
     - name: set_password
       release: windows-utilities
       properties:
