--- a/manifests/ops-files/iaas/azure/cloud-provider.yml
+++ b/manifests/ops-files/iaas/azure/cloud-provider.yml
@@ -20,6 +20,7 @@
         useInstanceMetadata: true
         vnetName: ((vnet_name))
         vnetResourceGroup: ((vnet_resource_group_name))
+        loadBalancerSku: standard
     provides:
       cloud-provider: {as: master-cloud-provider}
 
@@ -65,6 +66,7 @@
         useInstanceMetadata: true
         vnetName: ((vnet_name))
         vnetResourceGroup: ((vnet_resource_group_name))
+        loadBalancerSku: standard
     provides:
       cloud-provider: {as: worker-cloud-provider}
 
