--- a/manifests/ops-files/set-certificate-duration.yml
+++ b/manifests/ops-files/set-certificate-duration.yml
@@ -15,9 +15,13 @@
   value: ((certificate-duration))
 
 - type: replace
+  path: /variables/name=tls-kube-controller-manager/options/duration?
+  value: ((certificate-duration))
+
+- type: replace
   path: /variables/name=tls-etcd-v0-17-0/options/duration?
   value: ((certificate-duration))
-  
+
 - type: replace
   path: /variables/name=tls-etcdctl/options/duration?
   value: ((certificate-duration))
