--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -70,10 +70,10 @@ instance_groups:
       admin-password: ((kubo-admin-password))
       admin-username: admin
       k8s-args:
-        audit-log-path: /var/vcap/sys/log/kube-apiserver/audit.log
         audit-log-maxage: 0
-        audit-log-maxsize: 0
         audit-log-maxbackup: 0
+        audit-log-maxsize: 0
+        audit-log-path: /var/vcap/sys/log/kube-apiserver/audit.log
         audit-policy-file: /var/vcap/jobs/kube-apiserver/config/audit_policy.yml
         authorization-mode: RBAC
         client-ca-file: /var/vcap/jobs/kube-apiserver/config/kubernetes.pem
@@ -97,7 +97,7 @@ instance_groups:
         runtime-config: api/v1
         secure-port: 8443
         service-account-key-file: /var/vcap/jobs/kube-apiserver/config/service-account-public-key.pem
-        service-cluster-ip-range: "10.100.200.0/24"
+        service-cluster-ip-range: 10.100.200.0/24
         storage-media-type: application/json
         tls-cert-file: /var/vcap/jobs/kube-apiserver/config/kubernetes.pem
         tls-private-key-file: /var/vcap/jobs/kube-apiserver/config/kubernetes-key.pem
@@ -120,9 +120,6 @@ instance_groups:
     properties:
       api-token: ((kube-controller-manager-password))
       cluster-signing: ((kubo_ca))
-      service-account-private-key: ((service-account-key.private_key))
-      tls:
-        kubernetes: ((tls-kubernetes))
       k8s-args:
         cluster-signing-cert-file: /var/vcap/jobs/kube-controller-manager/config/cluster-signing-ca.pem
         cluster-signing-key-file: /var/vcap/jobs/kube-controller-manager/config/cluster-signing-key.pem
@@ -132,18 +129,21 @@ instance_groups:
         terminated-pod-gc-threshold: 100
         use-service-account-credentials: true
         v: 2
+      service-account-private-key: ((service-account-key.private_key))
+      tls:
+        kubernetes: ((tls-kubernetes))
     release: kubo
   - name: kube-scheduler
     properties:
       api-token: ((kube-scheduler-password))
-      tls:
-        kubernetes: ((tls-kubernetes))
       kube-scheduler-configuration:
         apiVersion: componentconfig/v1alpha1
-        kind: KubeSchedulerConfiguration
         clientConnection:
           kubeconfig: /var/vcap/jobs/kube-scheduler/config/kubeconfig
         disablePreemption: false
+        kind: KubeSchedulerConfiguration
+      tls:
+        kubernetes: ((tls-kubernetes))
     release: kubo
   - name: kubernetes-roles
     properties:
@@ -208,8 +208,17 @@ instance_groups:
   - name: kubelet
     properties:
       api-token: ((kubelet-password))
+      drain-api-token: ((kubelet-drain-password))
+      k8s-args:
+        allow-privileged: false
+        cni-bin-dir: /var/vcap/jobs/kubelet/packages/cni/bin
+        container-runtime: docker
+        docker: unix:///var/vcap/sys/run/docker/docker.sock
+        docker-endpoint: unix:///var/vcap/sys/run/docker/docker.sock
+        keep-terminated-pod-volumes: false
+        kubeconfig: /var/vcap/jobs/kubelet/config/kubeconfig
+        network-plugin: cni
       kubelet-configuration:
-        kind: KubeletConfiguration
         apiVersion: kubelet.config.k8s.io/v1beta1
         authentication:
           anonymous:
@@ -219,22 +228,13 @@ instance_groups:
         authorization:
           mode: Webhook
         clusterDNS:
-          - 10.100.200.10
+        - 10.100.200.10
         clusterDomain: cluster.local
         failSwapOn: false
+        kind: KubeletConfiguration
         serializeImagePulls: false
         tlsCertFile: /var/vcap/jobs/kubelet/config/kubelet.pem
         tlsPrivateKeyFile: /var/vcap/jobs/kubelet/config/kubelet-key.pem
-      drain-api-token: ((kubelet-drain-password))
-      k8s-args:
-        allow-privileged: false
-        cni-bin-dir: "/var/vcap/jobs/kubelet/packages/cni/bin"
-        container-runtime: docker
-        docker-endpoint: "unix:///var/vcap/sys/run/docker/docker.sock"
-        docker: "unix:///var/vcap/sys/run/docker/docker.sock"
-        keep-terminated-pod-volumes: false
-        kubeconfig: "/var/vcap/jobs/kubelet/config/kubeconfig"
-        network-plugin: cni
       tls:
         kubelet: ((tls-kubelet))
         kubelet-client-ca:
@@ -244,21 +244,21 @@ instance_groups:
   - name: kube-proxy
     properties:
       api-token: ((kube-proxy-password))
-      tls:
-        kubernetes: ((tls-kubernetes))
       kube-proxy-configuration:
         apiVersion: kubeproxy.config.k8s.io/v1alpha1
-        kind: KubeProxyConfiguration
-        clusterCIDR: 10.200.0.0/16
         clientConnection:
           kubeconfig: /var/vcap/jobs/kube-proxy/config/kubeconfig
-        mode: iptables
+        clusterCIDR: 10.200.0.0/16
         iptables:
           masqueradeAll: false
           masqueradeBit: 14
           minSyncPeriod: 0s
           syncPeriod: 30s
+        kind: KubeProxyConfiguration
+        mode: iptables
         portRange: ""
+      tls:
+        kubernetes: ((tls-kubernetes))
     release: kubo
   name: worker
   networks:
