Remove key_usage for unit tests
* bosh CLI does not support it

--- a/manifests/ops-files/misc/local-config-server.yml
+++ b/manifests/ops-files/misc/local-config-server.yml
@@ -4,3 +4,5 @@
   path: /variables/name=tls-kubelet-client/options/organization
 - type: remove
   path: /variables/name=tls-kubernetes/options/organization
+- type: remove
+  path: /variables/name=tls-kube-controller-manager/options/key_usage
