Fix the tests for azure cloud provider ops-file
[#161996693]

--- a/manifests/ops-files/iaas/azure/use-credentials.yml
+++ b/manifests/ops-files/iaas/azure/use-credentials.yml
@@ -7,7 +7,7 @@
   value: ((client_id))
 
 - type: replace
-  path: /instance_groups/name=master/jobs/name=cloud-provider/properties/cloud-config/aadClientSecret
+  path: /instance_groups/name=master/jobs/name=cloud-provider/properties/cloud-config/aadClientSecret?
   value: ((client_secret))
 
 - type: replace
@@ -19,5 +19,5 @@
   value: ((client_id))
 
 - type: replace
-  path: /instance_groups/name=worker/jobs/name=cloud-provider/properties/cloud-config/aadClientSecret
+  path: /instance_groups/name=worker/jobs/name=cloud-provider/properties/cloud-config/aadClientSecret?
   value: ((client_secret))
