--- a/manifests/cfcr.yml
+++ b/manifests/cfcr.yml
@@ -291,7 +291,7 @@ releases:
 stemcells:
 - alias: default
   os: ubuntu-xenial
-  version: latest
+  version: 170.9
 update:
   canaries: 1
   canary_watch_time: 10000-300000
