--- a/manifests/ops-files/change-audit-log.yml
+++ b/manifests/ops-files/change-audit-log.yml
@@ -2,16 +2,16 @@
 ---
 - type: replace
   path: /instance_groups/name=master/jobs/name=kube-apiserver/properties/k8s-args/audit-log-maxage
-  value: ((audit-log-maxage))
+  value: ((k8s-args-audit-log-maxage))
 
 ---
 - type: replace
   path: /instance_groups/name=master/jobs/name=kube-apiserver/properties/k8s-args/audit-log-maxbackup
-  value: ((audit-log-maxbackup)) 
+  value: ((k8s-args-audit-log-maxbackup)) 
 
 ---
 - type: replace
   path: /instance_groups/name=master/jobs/name=kube-apiserver/properties/k8s-args/audit-log-maxsize
-  value: ((audit-log-maxsize)) 
+  value: ((k8s-args-audit-log-maxsize)) 
 
 
